add conversion of PNG to ZPL
